aya-parser/src/parser/instructions/snapshots/aya_parser__parser__instructions__jle__tests__jle_reg.snap
---
source: aya-parser/src/parser/instructions/jle.rs
expression: result
---
Instruction(
    JleReg(
        Address(
            ByteOffset {
                start: 7,
                end: 11,
            },
        ),
        Register(
            ByteOffset {
                start: 14,
                end: 16,
            },
        ),
    ),
)
